--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ matplotlib = "^3.3.3"
 statsmodels = "^0.12.1"
 jupyterlab = "^3.0.0"
 miceforest = "^2.0.3"
+tqdm = "^4.55.1"
 
 [tool.poetry.dev-dependencies]
 
